Use Java Modules. Moved resources back due to single module only in Eclipse